Closed
Bug 1698077
Opened 4 years ago
Closed 4 years ago
Assertion failure when running the shell with --nursery-size=0
Categories
(Core :: JavaScript: GC, defect, P3)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
88 Branch
Tracking | Status | |
---|---|---|
firefox88 | --- | fixed |
People
(Reporter: jonco, Assigned: jonco)
Details
Attachments
(1 file)
This sets the max nursery size, and I had expected this to disable the nursery. Instead this happened:
~/work/bug/js/src$ ./default-build/shell --nursery-size=0
Assertion failure: false (cx->runtime()->gc.setParameter(key, value)), at /Users/jon/work/bug/js/src/jsapi.cpp:1469
Segmentation fault: 11
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → jcoppeard
Severity: -- → N/A
Priority: -- → P3
Assignee | ||
Comment 1•4 years ago
|
||
This does the simplest thing to avoid the assertion and educate the user.
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/acefe66ba357
Display an error message when attempting to set the max nursery size to zero in the shell r=sfink
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox88:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•