Bug 1698077 - Display an error message when attempting to set the max nursery size to zero in the shell r=sfink

This does the simplest thing to avoid the assertion and educate the user.

Differential Revision: https://phabricator.services.mozilla.com/D108425